// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flags > --reporter > basic reporter should apply #0 1`] = `
Object {
  "context": "<PROJECT_ROOT>",
  "entry": "<PROJECT_ROOT>/test/fixtures/common/entry-a.js",
  "mode": "development",
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "basic",
  "stats": Object {
    "builtAt": false,
    "hash": false,
    "timings": false,
  },
}
`;

exports[`Flags > --reporter > basic reporter should build #0 1`] = `
"Version: webpack 4.3.0
  Asset      Size  Chunks             Chunk Names
main.js  2.96 KiB    main  [emitted]  main
Entrypoint main = main.js
[./test/fixtures/common/entry-a.js] 41 bytes {main} [built]"
`;

exports[`Flags > --reporter > basic reporter should build #1 1`] = `"bf58edd8"`;

exports[`Flags > --reporter > stylish reporter should apply #0 1`] = `
Object {
  "context": "<PROJECT_ROOT>",
  "entry": "<PROJECT_ROOT>/test/fixtures/common/entry-a.js",
  "mode": "development",
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
}
`;

exports[`Flags > --reporter > stylish reporter should build #0 1`] = `
"
webpack v4.3.0

2c2cd86350a8b0063c7b
  size     name        module                             status
  41 B     entry-a.js  ./test/fixtures/common/entry-a.js  built

  size     name        asset                              status
  3.03 kB  main        main.js                            emitted

  <duration> 
"
`;

exports[`Flags > --reporter > stylish reporter should build #1 1`] = `"bf58edd8"`;
